crates/providers/openai/tests/snapshots/streaming__stream_happy_path_chunks.snap
---
source: crates/providers/openai/tests/streaming.rs
expression: "&chunks"
---
[
  {
    "id": "chatcmpl-1",
    "object": "chat.completion.chunk",
    "created": 1716681600,
    "model": "gpt-4o",
    "choices": [
      {
        "index": 0,
        "delta": {
          "role": "assistant"
        },
        "finish_reason": null
      }
    ]
  },
  {
    "id": "chatcmpl-1",
    "object": "chat.completion.chunk",
    "created": 1716681600,
    "model": "gpt-4o",
    "choices": [
      {
        "index": 0,
        "delta": {
          "content": "Hello"
        },
        "finish_reason": null
      }
    ]
  },
  {
    "id": "chatcmpl-1",
    "object": "chat.completion.chunk",
    "created": 1716681600,
    "model": "gpt-4o",
    "choices": [
      {
        "index": 0,
        "delta": {
          "content": " world"
        },
        "finish_reason": null
      }
    ]
  },
  {
    "id": "chatcmpl-1",
    "object": "chat.completion.chunk",
    "created": 1716681600,
    "model": "gpt-4o",
    "choices": [
      {
        "index": 0,
        "delta": {
          "content": "!"
        },
        "finish_reason": "stop"
      }
    ]
  },
  {
    "id": "chatcmpl-1",
    "object": "chat.completion.chunk",
    "created": 1716681600,
    "model": "gpt-4o",
    "choices": [],
    "usage": {
      "prompt_tokens": 10,
      "completion_tokens": 2,
      "total_tokens": 12,
      "cached_tokens": 0
    }
  }
]
